Fix minor UI issues

--- a/app/assets/stylesheets/backend/categories.scss
+++ b/app/assets/stylesheets/backend/categories.scss
@@ -31,3 +31,7 @@ a.category-link{
 .border-left-inactive{
   border-left: 2px solid #aaaaaa !important;
 }
+
+.textarea-category{
+  min-height: 120px;
+}
