--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -12,7 +12,7 @@
        
       </div>
       <div class="col-7 text-right">
-        <%= link_to 'BACK', tags_path, class: "btn btn-sm btn-secondary" %>
+        <%# link_to 'BACK', tags_path, class: "btn btn-sm btn-secondary" %>
         <%= f.submit "SAVE", class: "btn btn-sm btn-purple" %>
       </div>
     </div>
