--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -55,7 +55,7 @@
         <% end %>
       </div>
       <div class="col-7 text-right">
-        <%= link_to 'BACK', :back, class: "btn btn-sm btn-light", data: { turbolinks: false } %>
+        <%# link_to 'BACK', :back, class: "btn btn-sm btn-light", data: { turbolinks: false } %>
         <%= f.submit "SAVE", class: "btn btn-sm btn-purple" %>
       </div>
     </div>
