--- a/app/views/sign_up_notify_mailer/user_signed_up.html.erb
+++ b/app/views/sign_up_notify_mailer/user_signed_up.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Hey Admin.. a new user has just signed up with a <%= @user.signed_up_type %> account</p>
+    <p>Hey Admin.. a new user has just signed up</p>
     <p></p>
     <p>email: <em><%= @user.email %></em></p>
     <p>Thanks and have a great day!</p>
