Pre-setup rails master key

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
         <li class="dropdown py-1 py-md-0">
           <a class="nav-link dropdown-toggle pl-sm-2 mt-sm-2 mr-3" href="#" id="navbarDropdown"
               role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= current_user.email %>
+            <%= current_user.username %>
             <i class="dropdown icon"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-right shadow-sm pt-3 pb-2 text-center text-lg-left" aria-labelledby="navbarDropdown">
