--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -11,6 +11,10 @@
       <%# devise_error_messages! %>
       <%= render 'layouts/error_messages', object: f.object %>
 
+      <div class="form-group">
+        <%= f.label :username %><br />
+        <%= f.text_field :username, autofocus: true, class: 'form-control' %>
+      </div>
 
       <div class="form-group">
         <%= f.label :email %><br />
