Initialize attachments support

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -42,6 +42,15 @@
     </div>
   </div>
 
+  <div class="form-row mb-4">
+    <div class="col-12 col-lg-6">
+      <div class="form-group">
+        <%= f.label :attachments %>
+        <%= f.file_field :attachments, multiple: true %>
+      </div>
+    </div>
+  </div>
+
   <div class="actions">
     <div class="row">
       <div class="col-5">
