Setup v0.1 of uploads

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -43,38 +43,41 @@
       </div>
     </div>
 
-    <% if @note.attachments.any? %>
     <hr />
-      <h6 class="mt-2 text-bold">ATTACHMENTS</h6>
+    <h6 class="mt-2 text-bold">ATTACHMENTS</h6>
+    <% if @note.attachments.any? %>
       <div class="form-row mb-4">
         <% @note.attachments.each do |att| %>
-          <div class="col-md-12">
+          <div class="col-md-12 attachment-item-<%= att.id %>">
             <div class="card bordered rounded-lg bg-white mt-2 mr-0 px-3 py-3">
               <div>
-                <div class="text-soft d-inline-block" style="width: 30px;">
+                <div class="text-soft d-inline-block" style="width: 35px;">
                   <%= File.extname(att.filename.to_s).strip.upcase[1..-1] %>
                 </div>
                 <%= link_to att.filename.to_s, url_for(att), target: "_blank", class: 'link-purple ml-2' %>
                 <%# image_tag att.preview(resize_to_limit: [100, 100]) if att.previewable? %>
                 <div class="float-right">
                   <%= link_to "<i class='fa fa-trash ml-2' style='font-size: 18px;'></i>".html_safe,
-                    rails_blob_path(att, disposition: "attachment"), class: 'link-purple ml-2' %>
+                    "#",
+                    id: "js-att-id-#{att.id}",
+                    class: "link-purple ml-2 js-delete-attachment",
+                    data: { turbolinks: false } %>
                 </div>
               </div>
             </div>
           </div>
         <% end %>
       </div>
-      <div class="form-row">
+    <% end %>
+    <div class="form-row">
         <div class="col-12 col-lg-6">
           <div class="form-group">
-            <%# f.label :attachments %>
             Add one or multiple attachments:  <br/><br/>
-            <%= f.file_field :attachments, multiple: true %>
+            <%= f.file_field :attachments, multiple: true, direct_upload: true %>
           </div>
         </div>
       </div>
-    <% end %>
+    <%= hidden_field_tag :current_guid, @note.guid if @note %>
 
     <hr />
     <div class="actions">
