--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -65,12 +65,30 @@
         <div class="col-md-12">
           <div class="card bordered rounded-lg shadow-sm bg-white mt-2 mr-0 px-3 py-3">
             <div>
-              <div class="text-soft d-inline-block" style="width: 30px;">
+              <div class="text-soft d-inline-block middle-align" style="width: 35px;">
                 <%= File.extname(att.filename.to_s).strip.upcase[1..-1] %>
               </div>
-              <%= link_to att.filename.to_s, url_for(att), target: "_blank", class: 'link-purple ml-2' %>
-              <%# image_tag att.preview(resize_to_limit: [100, 100]) if att.previewable? %>
-              <div class="float-right">
+              <% if att.previewable? %>
+                <%= image_tag att.preview(combine_options: {
+                                              auto_orient: true,
+                                              gravity: "center",
+                                              resize: "24x24^",
+                                              crop: "24x24+0+0"
+                                              }), class: 'ml-2' %>
+              <% elsif att.variable? %>
+                <%= image_tag att.variant(combine_options: {
+                                              auto_orient: true,
+                                              gravity: "center",
+                                              resize: "24x24^",
+                                              crop: "24x24+0+0"
+                                              }), class: 'ml-2' %>
+              <% else %>
+                <div class="ml-2 text-soft d-inline-block middle-align text-center" style="width: 24px; height: 24px;">
+                  <i class="fa fa-paperclip"></i>
+                </div>
+              <% end %>
+              <%= link_to att.filename.to_s, url_for(att), target: "_blank", class: 'link-purple middle-align ml-2' %>                                      
+              <div class="float-right middle-align">
                 <%= link_to "<i class='fa fas fa-download ml-2' style='font-size: 18px;'></i>".html_safe,
                   rails_blob_path(att, disposition: "attachment"), class: 'link-purple ml-2' %>
               </div>
