--- a/app/assets/stylesheets/backend/colors.scss
+++ b/app/assets/stylesheets/backend/colors.scss
@@ -6,8 +6,9 @@ $white: #FFFFFF;
 $black: #000000;
 
 $light-grey: #F4F4F4;
-$soft-grey: #cccccc;
+$soft-grey: #bbbbbb;
 $dark-grey: #222222;
+$very-light-grey: #f8f8f8;
 
 .bg-light {
   background-color: #eeeeee !important;
@@ -23,6 +24,10 @@ $dark-grey: #222222;
 
 .text-soft{
   color: $soft-grey;
+}
+
+.bg-very-light{
+  background-color: $very-light-grey;
 }
 
 .text-purple{
