--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,8 @@
           <div class="dropdown-menu dropdown-menu-right shadow-sm pt-3 pb-2 text-center text-lg-left" aria-labelledby="navbarDropdown">
             <%= link_to 'Profile Settings', edit_user_registration_path,
               class: 'dropdown-item', data: { turbolinks: false } %>
+            <%= link_to 'Backup & restore', backups_path,
+              class: 'dropdown-item', data: { turbolinks: false } %>
             <%= link_to 'Import notes (beta)', import_zip_path,
               class: 'dropdown-item', data: { turbolinks: false } %>
             <%= link_to 'Export notes', download_export_zip_path,
