--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -11,7 +11,7 @@
           </div>
           <ul class="list">
             <% object.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
+              <li><%= msg.html_safe %></li>
             <% end %>
           </ul>
         </div>
