--- a/app/views/notes/_preview_modal.html.erb
+++ b/app/views/notes/_preview_modal.html.erb
@@ -1,14 +1,18 @@
-<div class="modal fade" id="preview-<%= attachment.id %>" role="dialog">
-  <div class="modal-dialog">
+<div class="modal fade" id="preview-<%= att.id %>" role="dialog">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">Preview</button>
+        <button type="button" class="close" data-dismiss="modal"><%= att.filename.to_s %></button>
       </div>
-      <div class="modal-body">
-        <%= image_tag url_for(attachment) %>
+      <div class="modal-body" style="max-height: calc(100vh - 180px);  overflow-y: auto;">
+        <% if att.previewable? %>
+          <iframe src="<%= url_for(att) %>" class="w-100" style="width:1170px; height:800px;"></iframe>
+        <% elsif att.variable? %>
+          <%= image_tag url_for(att), class: "img-fluid" %>
+        <% end %>
       </div>
       <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn btn-sm btn-light">Cancel</a>
+        <a href="#" data-dismiss="modal" class="btn btn-sm btn-light">Close</a>
       </div>
     </div>
   </div>
