--- a/app/views/notes/_preview_modal.html.erb
+++ b/app/views/notes/_preview_modal.html.erb
@@ -2,17 +2,17 @@
   <div class="modal-dialog modal-dialog-centered modal-xl">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><%= att.filename.to_s %></button>
+        <h5 class="modal-title"><%= att.filename.to_s %></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class='fa fa-times'></i>
+        </button>
       </div>
-      <div class="modal-body" style="max-height: calc(100vh - 180px);  overflow-y: auto;">
+      <div class="modal-body text-center" style="max-height: calc(100vh - 120px);  overflow-y: auto;">
         <% if att.previewable? %>
           <iframe src="<%= url_for(att) %>" class="w-100" style="width:1170px; height:800px;"></iframe>
         <% elsif att.variable? %>
-          <%= image_tag url_for(att), class: "img-fluid" %>
+          <%= image_tag url_for(att), class: "img-fluid h-100" %>
         <% end %>
-      </div>
-      <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn btn-sm btn-light">Close</a>
       </div>
     </div>
   </div>
