--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -7,9 +7,12 @@
   </div>
 
   <div class="form-group">
-    <div class="ui checkbox">
+    <div class="pretty p-icon p-fill">
       <%= f.check_box :active %>
-      <%= f.label :active %>
+      <div class="state p-primary">
+        <i class="icon fa fa-check"></i>
+        <%= f.label :active %>
+      </div>
     </div>
   </div>
 
