--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="form-group mb-4">
-      <div class="pretty p-icon p-default p-round p-smooth p-fill">
+      <div class="pretty p-icon p-fill">
         <%= f.check_box :favorite %>
         <div class="state p-warning">
           <i class="icon fa fa-check"></i>
@@ -44,10 +44,11 @@
     </div>
     <hr />
 
-    <h6 class="mt-2 text-bold">ATTACHMENTS</h6>
-    <%= render partial: 'attachments_list', locals: {note: @note, intent: :edit} %>
+    <% if current_user.account.attachments_enabled %>
+      <h6 class="mt-2 text-bold">ATTACHMENTS</h6>
+      <%= render partial: 'attachments_list', locals: {note: @note, intent: :edit} %>
 
-    <div class="form-row mt-4">
+      <div class="form-row mt-4">
         <div class="col-12 col-lg-6">
           <div class="form-group">
             Add one or multiple attachments:  <br/><br/>
@@ -57,10 +58,11 @@
                 <%= f.file_field :attachments, multiple: true, direct_upload: true %>
               <%# </span>
             </label> %>
-            
           </div>
         </div>
       </div>
+    <% end %>
+
     <%= hidden_field_tag :current_guid, @note.guid if @note %>
 
     <hr />
