--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -17,7 +17,7 @@
         <%= f.check_box :wiki_enabled %>
         <div class="state">
           <i class="icon fa fa-check"></i>
-          <%= f.label :wiki_enabled %>
+          <%= f.label :wiki %>
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
         <%= f.check_box :attachments_enabled %>
         <div class="state">
           <i class="icon fa fa-check"></i>
-          <%= f.label :attachments_enabled %>
+          <%= f.label :attachments %>
         </div>
       </div>
     </div>
