--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -6,53 +6,55 @@
     <hr/>
   </div>
 
-  <div class="offset-md-3 col-md-6">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form" }) do |f| %>
-      <%# devise_error_messages! %>
-      <%= render 'layouts/error_messages', object: f.object %>
+  <div class="offset-md-2 col-md-8">
+    <div class="card border rounded-lg shadow-sm px-5 pt-5 pb-4">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form" }) do |f| %>
+        <%# devise_error_messages! %>
+        <%= render 'layouts/error_messages', object: f.object %>
 
-      <div class="form-group">
-        <%= f.label :username %><br />
-        <%= f.text_field :username, autofocus: true, class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :username %><br />
+          <%= f.text_field :username, autofocus: true, class: 'form-control' %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        </div>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
-
-      <div class="form-group">
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-        <% if @minimum_password_length %>
-          <br />
-          <em><%= @minimum_password_length %> characters minimum</em>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
-      </div>
 
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+          <% if @minimum_password_length %>
+            <br />
+            <em><%= @minimum_password_length %> characters minimum</em>
+          <% end %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-        <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+        </div>
 
-      <div class="actions">
-        <div class="row">
-          <div class="col-5">
-          </div>
-          <div class="col-7 text-right">
-            <%= f.button "SAVE", type: 'submit', class: "btn btn-purple btn-sm" %>
+        <div class="form-group">
+          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+          <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
+        </div>
+
+        <div class="actions">
+          <div class="row">
+            <div class="col-5">
+            </div>
+            <div class="col-7 text-right">
+              <%= f.button "SAVE", type: 'submit', class: "btn btn-purple btn-sm" %>
+            </div>
           </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
