--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,16 +2,6 @@
 <div class="sidebar-sticky">
   <div class="top-item-menu-height">
   </div>
-  <ul class="nav flex-column mt-3 mb-2 mx-3">
-    <% if policy(Note.new).display_sidebar_item? %>
-      <li class="nav-item">
-        <%= link_to '<i class="fa fa-plus fa-fw mr-1"></i>Create Note'.html_safe,
-              new_note_path,
-              {remote: false, class: "btn btn-outline-purple-transparent btn-block btn-sm", data: { turbolinks: false }}
-              %>
-      </li>
-    <% end %>
-  </ul>
 
   <ul class="nav flex-column mt-3 mb-4 mx-3">
     <% if policy(Note.new).display_sidebar_item? %>
@@ -89,7 +79,7 @@
 
   <% if current_user.account.wiki_enabled %>
     <hr class="sidebar-hr"/>
-    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-3">
+    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-3 pb-3">
       <%= link_to 'WIKI', wiki_path, class: 'd-flex align-items-center link-purple-white', data: { turbolinks: false } %>
       <i class="fa fa-book"></i>
     </h6>
