--- a/app/views/layouts/wide.html.erb
+++ b/app/views/layouts/wide.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>wreeto.com</title>
+    <title>wreeto</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag 'application-backend', media: 'all', 'data-turbolinks-track': 'reload' %>
