Fix more N+1 queries

--- a/app/views/categories/wiki.html.erb
+++ b/app/views/categories/wiki.html.erb
@@ -13,7 +13,7 @@
   <thead>
   </thead>
   <tbody>
-    <% @categories.each do |category| %>
+    <% @categories.includes([:parent, :notes]).each do |category| %>
       <tr>
         <td class="pl-0 pb-0 border-0">
             <%= link_to category.full_title, category, data: { turbolinks: false }, class: "category-link text-bold link-purple" %>
@@ -29,7 +29,7 @@
             <% end %>
             <% if category.subcategories.size > 0 %>
               <div class="ml-4">
-                <% category.subcategories.ordered_by_title.each do |cat| %>
+                <% category.subcategories.includes([:notes]).ordered_by_title.each do |cat| %>
                   <div class="subcategory-item">
                     <%= link_to cat.title, cat, data: { turbolinks: false }, class: 'subcategory-link text-emphasis link-purple' %>
                     <% if cat.notes.any? %>
