--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -86,7 +86,7 @@
     <div class="col-12">
       <hr />
       <div class='d-flex flex-row justify-content-start'>
-        <div class="align-top"><i class="fa fa-link text-secondary"></i></div>
+        <div class="align-middle my-auto"><i class="fa fa-link text-secondary"></i></div>
         <div class="flex-grow-1 pl-2 ml-1">
           <%= render partial: 'links_list', locals: {note: @note} %>
         </div>
